--- a/assets/compiled/style.css
+++ b/assets/compiled/style.css
@@ -543,7 +543,7 @@ section.content {
       max-width: 200px;
       float: right;
       border-radius: 200px;
-      background-size: 200px;
+      background-size: 100%;
       margin: 0 0 1em 1em;
       box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.1);
       border: 1px black solid; }
