--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -32,6 +32,11 @@ section.content {
 			margin: 0 0 1em 1em;
 			box-shadow: 2px 2px 10px rgba(255, 255, 255, .10);
 			border: 1px black solid;
+			@include media(max-width 600px) {
+				display: block;
+				float: none;
+				margin: 0 auto 0 auto;
+			}
 			&.nicholas-young {
 				background: url(/assets/img/nicholas-young.jpg) center center no-repeat;
 			}
