--- a/assets/compiled/style.css
+++ b/assets/compiled/style.css
@@ -543,7 +543,6 @@ section.content {
       max-width: 200px;
       float: right;
       border-radius: 200px;
-      background-size: 100%;
       margin: 0 0 1em 1em;
       box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.1);
       border: 1px black solid; }
@@ -553,9 +552,11 @@ section.content {
           float: none;
           margin: 0 auto 0 auto; } }
       section.content #about .profile-image.nicholas-young {
-        background: url(/assets/img/nicholas-young.jpg) center center no-repeat; }
+        background: url(/assets/img/nicholas-young.jpg) center center no-repeat;
+        background-size: cover; }
       section.content #about .profile-image.lizzie-greco {
-        background: url(/assets/img/lizzie-greco.jpg) center center no-repeat; }
+        background: url(/assets/img/lizzie-greco.jpg) center center no-repeat;
+        background-size: cover; }
     section.content #about .bio {
       border-bottom: 1px #999999 solid; }
   section.content #events, section.content #press {
