--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -28,7 +28,6 @@ section.content {
 			max-width: 200px;
 			float: right;
 			border-radius: 200px;
-			background-size: 100%;
 			margin: 0 0 1em 1em;
 			box-shadow: 2px 2px 10px rgba(255, 255, 255, .10);
 			border: 1px black solid;
@@ -39,9 +38,11 @@ section.content {
 			}
 			&.nicholas-young {
 				background: url(/assets/img/nicholas-young.jpg) center center no-repeat;
+				background-size: cover;
 			}
 			&.lizzie-greco {
 				background: url(/assets/img/lizzie-greco.jpg) center center no-repeat;
+				background-size: cover;
 			}
 		}
 		.bio {
