--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -47,6 +47,14 @@ section.content {
 		}
 		.bio {
 			border-bottom: 1px #999 solid;
+			margin-bottom: 1em;
+			padding-bottom: 1em;
+			&:last-child { border-bottom: none; margin-bottom: none; padding-bottom: 0; }
+			h2 {
+				margin: 0 0 0 0;
+				padding: 0 0 0 0;
+			}
+			p:last-child { margin-bottom: 0; }
 		}
 	}
 	#events, #press {
