--- a/assets/css/sections/_header.scss
+++ b/assets/css/sections/_header.scss
@@ -47,15 +47,18 @@ header.top .background {
 			background-size: cover;
 		}
 		&.deep-dig {
-			background: url(../img/backgrounds/02.jpg) top center no-repeat;
+			background: url(../img/fade-25.png),
+						url(../img/backgrounds/02.jpg) top center no-repeat;
 			background-size: cover;
 		}
 		&.irradiated {
-			background: url(../img/backgrounds/03.jpg) top center no-repeat;
+			background: url(../img/fade-50.png),
+						url(../img/backgrounds/03.jpg) top center no-repeat;
 			background-size: cover;
 		}
 		&.spokes {
-			background: url(../img/backgrounds/04.jpg) top center no-repeat;
+			background: url(../img/fade-50.png),
+						url(../img/backgrounds/04.jpg) top center no-repeat;
 			background-size: cover;
 		}
 	}
