--- a/assets/css/sections/_nav.scss
+++ b/assets/css/sections/_nav.scss
@@ -1,6 +1,11 @@
 nav.menu {
 	ul {
-		float: right;
+		@include media(min-width 700px) {
+			float: right;
+		}
+		@include media(max-width 700px) {
+			display: block;
+		}
 		li {
 			display: inline-block;
 			margin-right: 1em;
@@ -27,14 +32,15 @@ nav.main {
 	padding-bottom: 1em;
 	a.logo {
 		height: 35px;
-		display: inline-block;
 		@include transition(all, .2s);
 		&:hover {
 			opacity: .6;
 		}
 		h1 {
-			font-size: 1.2em;	
-			display: inline-block;
+			@include media(min-width 700px) {
+				font-size: 1.2em;
+				float: left;
+			}
 			@include media(max-width 700px) {
 				font-size: 1em;
 				line-height: 1.2em;
