--- a/assets/css/sections/_header.scss
+++ b/assets/css/sections/_header.scss
@@ -33,7 +33,7 @@ header.top.wrap {
 	position: absolute;
 }
 
-header.top .background {
+header.top.home .background {
 	position: absolute;
 	width: 100%;
 	height: 100%;
