--- a/assets/compiled/style.css
+++ b/assets/compiled/style.css
@@ -420,29 +420,29 @@ header.top.home {
 header.top.wrap {
   position: absolute; }
 
-header.top .background {
+header.top.home .background {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: -9999; }
-  header.top .background .image {
+  header.top.home .background .image {
     width: 100%;
     height: 100%;
     position: relative;
     margin: 0 auto 0 auto; }
-    header.top .background .image.barred {
+    header.top.home .background .image.barred {
       background: url(../img/backgrounds/01.jpg) top center no-repeat;
       background-size: cover; }
-    header.top .background .image.deep-dig {
+    header.top.home .background .image.deep-dig {
       background: url(../img/fade-25.png), url(../img/backgrounds/02.jpg) top center no-repeat;
       background-size: cover; }
-    header.top .background .image.irradiated {
+    header.top.home .background .image.irradiated {
       background: url(../img/fade-50.png), url(../img/backgrounds/03.jpg) top center no-repeat;
       background-size: cover; }
-    header.top .background .image.spokes {
+    header.top.home .background .image.spokes {
       background: url(../img/fade-50.png), url(../img/backgrounds/04.jpg) top center no-repeat;
       background-size: cover; }
-  header.top .background .caption {
+  header.top.home .background .caption {
     background: rgba(0, 0, 0, 0.5);
     padding: .5em;
     position: absolute;
@@ -450,7 +450,7 @@ header.top .background {
     right: 0;
     font-size: .85em; }
     @media screen and (max-width: 600px) {
-      header.top .background .caption {
+      header.top.home .background .caption {
         font-size: .80em; } }
 
 @media screen and (min-width: 700px) {
@@ -513,6 +513,9 @@ section.content {
   *zoom: 1;
   /*
    * Sections
+   */
+  /*
+   * Gallery
    */
   /*
    * Lists
@@ -598,6 +601,33 @@ section.content {
       width: 100%; }
       section.content #about:last-child, section.content.home aside.sidebar:last-child {
         margin-right: 0; } }
+  section.content.gallery .photo {
+    display: block;
+    float: left;
+    margin-right: 2.35765%;
+    width: 48.82117%;
+    background: #333;
+    padding: .4em; }
+    section.content.gallery .photo:last-child {
+      margin-right: 0; }
+    @media screen and (max-width: 700px) {
+      section.content.gallery .photo {
+        display: block;
+        float: left;
+        margin-right: 2.35765%;
+        width: 100%;
+        margin-bottom: 1em; }
+        section.content.gallery .photo:last-child {
+          margin-right: 0; } }
+    @media screen and (min-width: 700px) {
+      section.content.gallery .photo {
+        margin-bottom: 1.5em; } }
+    section.content.gallery .photo.dig, section.content.gallery .photo.spokes {
+      margin-right: 0; }
+    section.content.gallery .photo img {
+      max-width: 100%;
+      margin: 0 0 0 0;
+      padding: 0 0 0 0; }
   section.content ul.basic-list {
     list-style-type: none;
     padding: 0 0 0 0;
@@ -643,11 +673,11 @@ body > footer {
   body > footer span.copyright {
     float: left;
     font-size: .75em; }
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: 700px) {
       body > footer span.copyright {
         display: block;
         float: none; } }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 700px) {
     body > footer ul.menu {
       display: block;
       float: none; } }
