--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -127,7 +127,7 @@ section.content {
 			input[type=email] {
 				border: none;
 				width: 80%;
-				background: #999;
+				background: rgba(255, 255, 255, .4);
 				padding: .5em;
 				color: black;
 			}
