--- a/assets/compiled/style.css
+++ b/assets/compiled/style.css
@@ -611,7 +611,7 @@ section.content {
     box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.8); }
     section.content.gallery .photo:last-child {
       margin-right: 0; }
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 900px) {
       section.content.gallery .photo {
         display: block;
         float: left;
@@ -637,6 +637,15 @@ section.content {
       section.content.gallery .photo .meta h3 {
         float: left;
         margin: 0 0 0 0; }
+      section.content.gallery .photo .meta button.add {
+        background: rgba(0, 0, 0, 0.3);
+        border: 1px #999999 solid;
+        padding: .5em;
+        color: white;
+        border-radius: 5px;
+        float: right; }
+        section.content.gallery .photo .meta button.add:hover {
+          background: rgba(255, 255, 255, 0.2); }
   section.content ul.basic-list {
     list-style-type: none;
     padding: 0 0 0 0;
@@ -672,6 +681,7 @@ body > footer {
   *zoom: 1;
   display: block;
   border-top: 1px #999999 solid;
+  margin-top: 1em;
   padding-bottom: 1em;
   padding-top: 1em; }
   body > footer:before, body > footer:after {
