--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -73,7 +73,7 @@ section.content {
 	&.gallery {
 		.photo {
 			@include span-columns(6);
-			@include media(max-width 700px) {
+			@include media(max-width 900px) {
 				@include span-columns(12);
 				margin-bottom: 1em;
 			}
@@ -93,6 +93,17 @@ section.content {
 				h3 {
 					float: left;
 					margin: 0 0 0 0;
+				}
+				button.add {
+					background: rgba(0, 0, 0, .3);
+					border: 1px #999 solid;
+					padding: .5em;
+					color: white;
+					border-radius: 5px;
+					float: right;
+					&:hover {
+						background: rgba(255, 255, 255, .2);
+					}
 				}
 			}
 		}
