--- a/assets/css/sections/_footer.scss
+++ b/assets/css/sections/_footer.scss
@@ -3,6 +3,7 @@ body > footer {
 	@extend .constrain;
 	display: block;
 	border-top: 1px #999 solid;
+	margin-top: 1em;
 	padding-bottom: 1em;
 	padding-top: 1em;
 	span.copyright {
