--- a/assets/compiled/style.css
+++ b/assets/compiled/style.css
@@ -605,10 +605,7 @@ section.content {
     display: block;
     float: left;
     margin-right: 2.35765%;
-    width: 48.82117%;
-    position: relative;
-    background: #333;
-    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.8); }
+    width: 48.82117%; }
     section.content.gallery .photo:last-child {
       margin-right: 0; }
     @media screen and (max-width: 900px) {
@@ -616,36 +613,14 @@ section.content {
         display: block;
         float: left;
         margin-right: 2.35765%;
-        width: 100%;
-        margin-bottom: 1em; }
+        width: 100%; }
         section.content.gallery .photo:last-child {
           margin-right: 0; } }
-    @media screen and (min-width: 700px) {
+    @media screen and (min-width: 800px) {
       section.content.gallery .photo {
-        margin-bottom: 1.5em; } }
+        margin-bottom: -1em; } }
     section.content.gallery .photo.dig, section.content.gallery .photo.spokes {
       margin-right: 0; }
-    section.content.gallery .photo img {
-      max-width: 100%; }
-    section.content.gallery .photo .meta {
-      width: 100%;
-      bottom: 0px;
-      left: 0px;
-      position: absolute;
-      padding: 1em;
-      background: rgba(0, 0, 0, 0.6); }
-      section.content.gallery .photo .meta h3 {
-        float: left;
-        margin: 0 0 0 0; }
-      section.content.gallery .photo .meta button.add {
-        background: rgba(0, 0, 0, 0.3);
-        border: 1px #999999 solid;
-        padding: .5em;
-        color: white;
-        border-radius: 5px;
-        float: right; }
-        section.content.gallery .photo .meta button.add:hover {
-          background: rgba(255, 255, 255, 0.2); }
   section.content ul.basic-list {
     list-style-type: none;
     padding: 0 0 0 0;
