--- a/assets/css/sections/_content.scss
+++ b/assets/css/sections/_content.scss
@@ -133,6 +133,9 @@ section.content {
 		a.citation {
 			font-size: .96em;
 		}
+		a.rsvp {
+			text-decoration: underline;
+		}
 	}
 
 	.widget.press {
